spectec/test/elab/neg/type-unparen-outside-notation.spectec
;; The `##` unparenthesize operator appears in regular expression
;; position rather than inside a notation declaration.

dec $f : nat
def $f = ## 0
